--- a/dev/shop-map.pug
+++ b/dev/shop-map.pug
@@ -15,5 +15,5 @@ block content
           include modules/filters/filter-shops-map
         #map
 
-block script
-  script(type='text/javascript', src='../js/shops-map.js')        
+//- block script
+//-   script(type='text/javascript', src='../js/shops-map.js')        
