--- a/dev/modules/catalog-shops.pug
+++ b/dev/modules/catalog-shops.pug
@@ -4,11 +4,12 @@
         .item-shop 
           .item-shop-info
             .item-shop-title= item.name        
+            //- .item-shop-title= item.id        
             .item-shop-address= item.address        
             .item-shop-time= item.time        
             .item-shop-time= item.time1        
             .item-shop-phone 
               a(href=`tel:${item.phone}`)= item.phone 
-            a.link.link--black_border.show-on--map(href=`shop-map.html?id=${item.id}` data-shop=item.id) Показать на карте       
+            a.link.link--black_border.show-on--map(href=`shop-map.html?id=${item.id}`) Показать на карте       
 
 
