--- a/dev/basket.pug
+++ b/dev/basket.pug
@@ -32,5 +32,5 @@ block content
 block footer-popups
   include modules/popups/show-on-map-popup  
 
-block script
-  script(type='text/javascript', src='../../js/shops-map.js')        
+//- block script
+//-   script(type='text/javascript', src='../../js/shops-map.js')        
